<resources>
    <string name="application_name" translatable="false">Schedulize</string>
    <string name="app_name">Schedulize</string>
    <string name="add_fragment">Add</string>
    <string name="developer" translatable="false">Matjon</string>
    <string name="manager_and_designer" translatable="false">Azizjon Akramov</string>

    <string name="edit_fragment">Edit</string>
    <string name="setting_fragment">Settings</string>
    //Subject
    <string name="subject_name">Subject</string>
    <string name="subject_day_of_week">Day of the week</string>
    <string name="subject_start_time">Entrance</string>
    <string name="subject_end_time">Exit</string>
    <string name="subject_teacher">Teacher</string>
    <string name="subject_place">Place</string>
    //Day of week

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    //dialog text
    <string name="dialog_delete">Do you really want to delete?</string>
    <string name="dialog_pick_time">Select time</string>
    <string name="dialog_cancel">Cancel</string>
    //Text in mainActivity
    <string name="schedulize_is_empty">The schedule is currently empty. To add a lesson to the table click the "+" button above</string>
    //Helper text
    <string name="may_be_empty">optional</string>
    //Error text
    <string name="error_empty">Required</string>
    //Menu
    <string name="add_subject">Add</string>
    <string name="setting">Settings</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>

    <!-- Preference Titles -->
    <string name="general">General</string>
    <string name="data">Data</string>
    <string name="about_app">About</string>

    <!-- general Preferences -->
    <string name="notification_title">Notifications</string>
    <string name="language_title">Language</string>
    <string name="theme_title">Dark mode</string>
    <string name="notification_summary">Notification settings</string>

    <!-- Data Preferences -->
    <string name="export_title">Export</string>
    <string name="import_title">Import</string>
    <string name="export_summary">Export schedule</string>
    <string name="import_summary">Import schedule</string>

    <!-- About app Preferences -->
    <string name="version_title">Version</string>
    <string name="manager_title">Project manager and designer</string>
    <string name="programmer_title">Programmer</string>
    <string name="telegram_title">Telegram</string>
    <string name="telegram_summary">Telegram chat of the project</string>

    <string name="english" translatable="false">English</string>
    <string name="russia" translatable="false">Русский</string>
    <string name="uzbek" translatable="false">O\'zbekcha</string>

    <string name="english_code" translatable="false">en</string>
    <string name="russia_code" translatable="false">ru</string>
    <string name="uzbek_code" translatable="false">uz</string>

    <string name="theme_system">System default</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>

    <string name="appwidget_title_text">Today\'s lesson schedule</string>
    <string name="add_widget">Add widget</string>


</resources>